Refactored Trace class static methods to remove reference to Plugin class and replace with String pluginId